# bc-totorobot

./: .gitignore  Cargo.toml  README.md  host.json  main.bicep
.github/workflows/: build-deploy.yml  on-push.yml  security-audit.yml
post_mailchimp_stats/: function.json
src/: lib.rs  main.rs
