[package]
name = "totorobot"
version = "0.1.2"
authors = ["David Mytton <david@davidmytton.co.uk>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "totorobot"

[dependencies]
log = "^0.4.13"
mailchimp = "^0.1.15"
reqwest = { version = "^0.11.0", features = ["blocking", "json"] }
rocket = "^0.4.6"
