[package]
name = "totorobot"
version = "0.1.4"
authors = ["David Mytton <david@davidmytton.co.uk>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "totorobot"

[dependencies]
log = "^0.4.14"
mailchimp = "^0.1.15"
num-format = "^0.4.0"
reqwest = { version = "^0.11.3", features = ["blocking", "json"] }
rocket = "^0.4.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "^0.4.9"
default-features = false
features = ["json"]
